# fsregistration

./: .gitignore  CMakeLists.txt  CMakePresets.json  FEATURE_PLAN.md  README.md  README_GPU.md  package.xml  requirements.txt
debug_results/: environment.yml  evaluate_2d.py  evaluate_3d.py
debug_results/2d/: plot_2d_registration.ipynb
debug_results/3d/: plot_correlation_pyvista.py  plot_full_3d_transformation.ipynb  plot_full_3d_transformation.py
debug_results/3d/.ipynb_checkpoints/: plot_full_3d_transformation-checkpoint.ipynb
debug_results/registrationFourier/: README.md  add_command_to_batchfile.py  angles_r.py  ground_truth_calculations_tuhh_tank.py  hipass_filter.py  plot_all_solutions_in_registration.py  plot_ffts2d.py  plotting_ocean_lab_data.py  plotting_valentin_map.py  rotation_matrix.py  rotation_matrix_zyz.py  weighting_function.py
debug_results/registrationFourier/3D/: compute_statistics_of_file_list.py  just_plot_3d_volumic_data.py  plotting_3d_dfki.py  random_test_script.py  read_in_results_predator.py
debug_results/registrationFourier/FMT/: register.py
debug_results/registrationFourier/ICRA2024Scripts/: plot_everything.py  plot_image.py
debug_results/registrationFourier/RadarStuff/: blending_images.py  plot_all_trajectories.py
debug_results/registrationFourier/archive/: plot_all_possible_solutions_for_one_scan.py  plot_st_pere_all_transformations.py  read_in_fftw_tests.py  read_in_output_slam.py  show_box_plots_results.py  show_results_of_best_guess_matching.py  st_pere_dataset_registration_test.py  translation_calculation_fft.py  working_rotation_registration.py
debug_results/registrationFourier/datasetReleaseJournal/: plotting_data.py
debug_results/registrationFourier/resultsJournalFMS2D/: plot_results.py  read_in_consecutive_results.py  results_read_in.py
debug_results/registrationFourier/resultsOfManyMatching/: box_plot_results_folder_results.py  box_plot_stepping_angles_median.py  show_map_all.py
find-peaks/: .gitignore
find-peaks/include/findpeaks/: findpeaks.hpp  persistence.hpp  union_find.hpp
find-peaks/include/kdtree/: kdtree.hpp
find-peaks/src/: union_find.cpp
include/: generalHelpfulTools.h  softCorrelationClass.h  softCorrelationClass3D.h  softCorrelationClassGPU.h  softRegistrationClass.h  softRegistrationClass3D.h
ml_registration/geotransformer/: setup.py  setup_cpu.py
ml_registration/geotransformer/geotransformer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ml_registration/hybridpoint_wrapper/: README.md  __init__.py  data.py  model.py
ml_registration/pointreggpt/: requirements.txt
msg/: PotentialSolution.msg  PotentialSolution2D.msg  PotentialSolution3D.msg
plotting_results/2d/: evaluate_2d.py  plot_2d_registration_results.ipynb
plotting_results/3d/: debug_metadata.json  plot_full_3d_transformation.ipynb  plot_full_3d_transformation.py
plotting_results/registrationFourier/: calculate_score_of_rotation.py  comparison_mcsam.py  fourie_coeff.py  get_voxel_data.py  matrix2_interleaved_format.py  plot_journal_2d_registration.py  read_json_graph_pcl.py
plotting_results/registrationFourier/3D/: angles_r.py  octree_test.py  plot_full_3d_transformation.py
plotting_results/registrationFourier/ICRA2024Scripts/: plot_pdfs.py
plotting_results/registrationFourier/RadarStuff/: error_correction.py  just_gt_plotting.py  plot_results_radar_paper.py  radar_to_point_cloud.py  read_in_errors.py
pythonScripts/: extractPointClouds.py  kissExample.py  plotting3DTest.py  randomScript.py  s3eMatchingFS3DICP.py  s3eMatchingTest.py
pythonScripts/configFiles/: environment_geo.yml  environment_hybridpoint.yml  environment_pointreggpt.yml  environment_regtr.yml
pythonScripts/exampleFiles/: open3DIPCExample.py
pythonScripts/matchingProfiling/: cloud_bin_0.pth  resultingTransformation.ply  showpcl.m  testingSoftOnPredatorData.py
pythonScripts/matchingProfiling3D/: README_ml_registration.md  benchmark_cpu_vs_mps.py  dataloader_utils.py  debug3dRegistration.py  resultingTransformation.ply  resultingTransformationSUB.ply  runPredatortests.sh  showpcl.m  testingFPFHOnPredatorData.py  testingGeoTransformerOnPredatorData.py  testingHybridPointOnPredatorData.py  testingICPOnPredatorData.py  testingPointRegGPTOnPredatorData.py  testingPredatorModelOnPredatorData.py  testingRegTROnPredatorData.py  testingSoftOnPredatorData.py
pythonScripts/radarDataset/: README.md  __init__.py  aggregate_benchmark_results.py  batchFileToRunAll.sh  boreasBenchmark.py  boreasBenchmarkFS2DSweep.py  boreasBenchmarkParallel.py  boreasDatasetLoader.py  boreasRegistrationFramework.py  boreasRegistrationMethods.py  boreasRun.py  boreasTestFileFS2D.py  bremenMssBenchmark.py  bremenMssBenchmarkParallel.py  bremenMssDatasetLoader.py  compareFreqDomainRotation.py  debugRawIcp.py  diagnoseNDT.py  downloadFullDataset.sh  intro.ipynb  playBoreas.py  randomStuff.py  randomStuff2.py  split_boreas_data_execution.md  testServiceCall.py  testingSequence.py  trajectory_viewer.ipynb  viewBoreasPairs.py  viewBremenMssPairs.py
pythonScripts/radarDataset/sdk/: play_radar.py
scripts/: setup_gpu_backend.sh
src/: callingServiceExample.cpp  callingServiceExample2D.cpp  callingServiceExample3D.cpp  generalHelpfulTools.cpp  pybind_ndt.cpp  pybind_registration_2d.cpp  pybind_registration_3d.cpp  registrationOf3DVoxels.cpp  registrationOfTwoImageScans.cpp  serviceImage.cpp  serviceRegistrationImage.cpp  serviceRegistrationVoxel.cpp  softCorrelationClass.cpp  softCorrelationClass3D.cpp  softCorrelationClassGPU.cpp  softCorrelation_gpu_backend.py  softRegistrationClass.cpp  softRegistrationClass3D.cpp  test_1angle_comparison.cpp  test_correlation_comparison.cpp  test_full_registration_comparison.cpp  test_full_registration_comparison2D.cpp  test_full_registration_comparison3D.cpp  test_single_registration3D.cpp
srv/: RequestListPotentialSolution.srv  RequestListPotentialSolution2D.srv  RequestListPotentialSolution3D.srv  RequestOnePotentialSolution.srv  RequestOnePotentialSolution2D.srv  RequestOnePotentialSolution3D.srv
weights/: README.md  download_models.sh
(+189 files in other folders)
